--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Android App Developer from Dharmsinh Desai University. I have a passion for creating seamless, beautiful
                 and creative application. I have experience with various programming languages. I am currently available
                 to hire.<br></p>
-            <a href="mailto:ziyadkader@gmail.com"> Get in touch</a>
+            <a href="mailto:pateljenil1451@gmail.com"> Get in touch</a>
         </section>
         <!-- menu -->
         <header id="menu">
@@ -57,7 +57,7 @@
             <p>I am a Android App Developer from Dharmsinh Desai University. I have a passion for creating seamless,
                 beautiful and creative application. I have experience with various programming languages. I am currently
                 available to hire.<br>
-                <a href="mailto:ziyadkader@gmail.com">Hire me</a>
+                <a href="mailto:pateljenil1451@gmail.com">Hire me</a>
             </p>
         </section>
 
