--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/ad9cb0368b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="images/z-icon.ico" type="image/x-icon">
-    <title>Ziyad</title>
+    <title>Jenil Patel</title>
 </head>
 
 <body>
