--- a/index.html
+++ b/index.html
@@ -186,9 +186,8 @@
                 <a href="https://github.com/Jenil095" description="Github"><i class="fab fa-github"></i>
                     github</a>
 
-                <a href="" description="facebook"><i class="fab fa-facebook"></i>
-                    facebook</a>
-
+                <a href="https://drive.google.com/drive/folders/1QCJ0meMTP7bQwvNoIcoeGpiQ3qlXbLuf" description="Rsume"><i class="fab fa-resume"></i>
+                    Resume</a>
 
             </div>
             </div>
