--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <a href="https://github.com/Jenil095" description="Github"><i class="fab fa-github"></i>
                     github</a>
 
-                <a href="https://drive.google.com/drive/folders/1QCJ0meMTP7bQwvNoIcoeGpiQ3qlXbLuf" description="Rsume"><i class="fab fa-resume"></i>
+                <a href="https://drive.google.com/file/d/1i_Zzqdz-7CLlqYeAyQZqsIGTjevVtRRr/view?usp=sharing" description="Rsume"><i class="fab fa-resume"></i>
                     Resume</a>
 
             </div>
