--- a/index.html
+++ b/index.html
@@ -66,34 +66,51 @@
             <h2>Skills</h2>
             <article>
                 <section>
+
+                    <h4> Competitive Programming <img class="section-logos" src="./images/programming.svg"></h4>
+                    <ul>
+                        <li skill-description="LeetCode"><object type="image/svg+xml"
+                                data="images/leetcode.svg"></object>LeetCode</li>
+                        <li skill-description="Hackerrank"><object type="image/svg+xml"
+                                data="images/hackerrank.svg"></object>Hackerrank</li>
+                        <li skill-description="CodeChef"><object type="image/svg+xml"
+                                data="images/codechef.svg"></object>CodeChef</li>
+                    </ul>
+
+                </section>
+                <section>
+
                     <h4>Programmings languages <img class="section-logos" src="./images/programming.svg"></h4>
                     <ul>
+                        <li skill-description="Kotlin"><object type="image/svg+xml"
+                                data="images/kotlin.svg"></object>Kotlin</li>
                         <li skill-description="java"><object type="image/svg+xml" data="images/java.svg"></object>Java
+                        </li>
+                        <li skill-description="C"><object type="image/svg+xml" data="images/c.svg"></object>C</li>
+                        <li skill-description="C++"><object type="image/svg+xml" data="images/c++.svg"></object>C++
                         </li>
                         <li skill-description="PHP"><object type="image/svg+xml" data="images/php.svg"></object>PHP</li>
                         <li skill-description="Python"><object type="image/svg+xml"
                                 data="images/python.svg"></object>Python</li>
+
                     </ul>
 
                 </section>
                 <section>
                     <h4>Databases<img class="section-logos" src="./images/database.svg"></h4>
                     <ul>
-                        <li skill-description="sqlite"><object type="image/svg+xml" data=""></object>Sqlite</li>
+                        <li skill-description="sqlite"><object type="image/svg+xml"
+                                data="images/sqlite.svg"></object>Sqlite</li>
                         <li skill-description="mysql"><object type="image/svg+xml"
                                 data="images/mysql.svg"></object>Mysql</li>
-                        <li skill-description="sqlserver"><object type="image/svg+xml"
-                                data="images/sqlserver.svg"></object>Sqlserver</li>
                         <li skill-description="firebase"><object type="image/svg+xml"
                                 data="images/firebase.svg"></object>Firebase</li>
                         <li skill-description="mongodb"><object type="image/svg+xml"
                                 data="images/mongodb.svg"></object>Mongodb</li>
-                        <li skill-description="Oracle"><object type="image/svg+xml"
-                                data="images/oracle.svg"></object>Oracle</li>
                     </ul>
                 </section>
                 <section>
-                    <h4>Other tools <img class="section-logos" src="./images/tools.svg"></h4>
+                    <h4> Tools <img class="section-logos" src="./images/tools.svg"></h4>
                     <ul>
                         <li skill-description="Android Studio"><object type="image/svg+xml"
                                 data="images/android-studio.svg"></object>Android Studio</li>
@@ -165,6 +182,10 @@
 
             <h2>Links</h2>
             <div>
+                <a href="https://drive.google.com/file/d/1i_Zzqdz-7CLlqYeAyQZqsIGTjevVtRRr/view?usp=sharing"
+                    description="Rsume"><i class="fab fa-resume"></i>
+                    Resume</a>
+
                 <a href="mailto:pateljenil1451@gmail.com" description="Mail"><i class="fas fa-envelope"
                         onmouseover='displayDescriptionOnLinks("fa-envelope");'></i>
                     mail</a>
@@ -185,9 +206,6 @@
 
                 <a href="https://github.com/Jenil095" description="Github"><i class="fab fa-github"></i>
                     github</a>
-
-                <a href="https://drive.google.com/file/d/1i_Zzqdz-7CLlqYeAyQZqsIGTjevVtRRr/view?usp=sharing" description="Rsume"><i class="fab fa-resume"></i>
-                    Resume</a>
 
             </div>
             </div>
