--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2>About me</h2>
             <p>I am a Android App Developer from Dharmsinh Desai University. I have a passion for creating seamless,
                 beautiful and creative application. I have experience with various programming languages. I am currently
-                available to hire.<br>
+                available to hire.<br><br>
                 <a href="mailto:pateljenil1451@gmail.com">Hire me</a>
             </p>
         </section>
